--- a/1.vcxproj
+++ b/1.vcxproj
@@ -140,6 +140,10 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="3a.cpp" />
+    <ClCompile Include="pb1.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="pb1.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
